Table head top offset: Prevent overlapping when scrolling trough deeply nested tables. (#1091)
* Nested tableheads do not overlap.

* different approach

* fixes

* removed unused

* Works

* dropdown and modal z-indexes

--- a/src/components/input/date/range/style.scss
+++ b/src/components/input/date/range/style.scss
@@ -65,7 +65,7 @@
 
 :host > smoothly-calendar {
 	position: absolute;
-	z-index: 10;
+	z-index: 20;
 	top: 4rem;
 	background-color: rgb(var(--smoothly-input-background));
 	max-width: 22rem;
